# slotbot

./: .env.example  .gitignore  Architechture.md  Design.md  Makefile  PRD.md  Readme.md  claude.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
data/: .gitkeep
docs/: INTERVIEW_AND_TECHNICAL_GUIDE.md
infra/: ngrok.yml
scripts/: check_tunnel.py  health_check.py  latency_bench.py  outbound_call.py  seed_clinic.py  simulate_agent.py  simulate_call.py  start_dev.py
services/: config.py
services/agents/: agentic_receptionist.py  barge_in.py  emergency.py  graph.py  hinglish_parser.py  llm_client.py  offline_fallback.py  session.py  state_types.py
services/agents/prompts/: agentic_receptionist_v1.txt  agentic_tool_result_v1.txt  collect_datetime_v1.txt  collect_name_v1.txt  collect_reason_v1.txt  confirm_slot_v1.txt  conversation_turn_v1.txt  extraction_v1.txt  offer_alternatives_v1.txt
services/agents/states/: booking.py  check_availability.py  clarify.py  collect_datetime.py  collect_name.py  collect_reason.py  confirm_slot.py  emergency_escalate.py  goodbye.py  greeting.py  (+3 more)
services/api/: app.py
services/calendar/: client.py
services/db/: database.py  models.py
services/sms/: client.py
services/stt/: deepgram_client.py
services/telephony/: audio_cache.py  gather_voice.py  phone.py  webhook.py  websocket.py
services/tts/: sarvam_client.py
tests/unit/: test_calendar_client.py  test_emergency_detection.py  test_hinglish_parser.py  test_llm_client.py  test_offline_fallback.py  test_phone.py  test_routing.py  test_tts_conversion.py
(+5 files in other folders)
