[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["services", "scripts"]

[project]
name = "slotbot"
version = "0.1.0"
description = "Real-time voice AI receptionist for Indian clinics"
readme = "Readme.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "twilio>=9.0.0",
    "deepgram-sdk>=3.7.0",
    "groq>=0.9.0",
    "anthropic>=0.40.0",
    "langgraph>=0.2.28",
    "langchain-groq>=0.1.9",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "audioop-lts>=0.2.1; python_version>='3.13'",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "black>=24.0.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "types-python-dateutil",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
